# lance-2025

./: .gitignore  .gitmodules  LANCE-2025.json  README.md  build.sh  foxglove_layout.json  run_client.sh  run_frappe.sh  run_local.sh  run_mocha.sh  strategem.txt
camera_utils/config/arducam1/: calibration.yaml  params.yaml
camera_utils/config/arducam_w/: calibration.yaml  params.yaml
camera_utils/config/uvc1/: params.yaml
csm-metrics/: .gitignore  CMakeLists.txt  package.xml  todo.txt
csm-metrics/include/csm_metrics/: profiling.hpp  profiling_config.hpp  stats.hpp
csm-metrics/msg/: FloatStamped.msg  LabelStamped.msg
csm-metrics/src/: profiling_manager.py
csm-metrics/src/cpp/: profiling.cpp  stats.cpp
debug_tools/src/: accuracy_analyzer.cpp
lance/: CMakeLists.txt  package.xml
lance/config/: config.json  foxglove_bridge.yaml  foxglove_bridge_live.yaml  lance.json  localization_live.yaml  multiscan_driver.yaml  perception.json  perception_live.yaml
lance/launch/: client.launch.py  foxglove.launch.py  lance.launch.py  live.launch.py  record_lidar.launch.py  record_motor.launch.py  remote.launch.py  robot.launch.py  sim.launch.py  test.launch.py  util.py
lance/src/: control_node.cpp  fg_path_server.cpp  robot_status.cpp  watchdog_node.cpp
lance/src/robot/: collection_state.cpp  collection_state.hpp  controller.hpp  hid_bindings.hpp  hid_constants.hpp  motor_interface.hpp  robot_controller.cpp  robot_controller.hpp  robot_math.hpp  robot_params.cpp  robot_params.hpp
lance/src/robot/controllers/: auto_controller.cpp  auto_controller.hpp  auto_mining_controller.cpp  auto_mining_controller.hpp  auto_offload_controller.cpp  auto_offload_controller.hpp  localization_controller.cpp  localization_controller.hpp  mining_controller.cpp  mining_controller.hpp  offload_controller.cpp  offload_controller.hpp  teleop_controller.cpp  teleop_controller.hpp  traversal_controller.cpp  traversal_controller.hpp
lance/src/robot/old/: controller.hpp
lance/src/teleop_control/: TODO.txt  calculations.hpp  collection_integrator.hpp  collection_state.cpp  collection_state.hpp  collection_status.hpp  controller.cpp  controller.hpp  logitech_map.hpp  main.cpp  motor_interface.hpp  robot_math.hpp
lance/src/util/: joy_utils.hpp  ros_utils.hpp
launch-utils/: CMakeLists.txt  package.xml
launch-utils/launch/: test.launch.py
launch-utils/src/launch_utils/: actions.py  common.py  preprocess.py  tf_converter.py  utilities.py
phoenix-driver/: CMakeLists.txt  LICENSE  README.md  package.xml
phoenix-driver/msg/: TalonInfo.msg
phoenix-driver/scripts/: can_shutdown.sh
phoenix-driver/src/: arduino_motor_reset.ino  falcon_test.cpp  motor_sim.cpp  phx5_driver.cpp  phx5_utils.hpp  phx6_driver.cpp  phx6_driver_old.cpp  phx6_utils.hpp  ros_utils.hpp  talon_twist_driver.cpp
ros-profiling/: CMakeLists.txt  package.xml
ros-profiling/include/ros_profiling/: ros_profiling.cpp  ros_profiling.hpp
ros-profiling/msg/: ProcessMetrics.msg  ThreadStatus.msg
ros-profiling/src/: profiling_manager.py
server/: CMakeLists.txt  package.xml
server/config/: tag_detection_live.yaml
server/launch/: foxglove.launch.py  live.launch.py  sim.launch.py
