<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lance</name>
  <version>0.0.1</version>
  <description>LANCE launch files and configuration</description>
  <maintainer email="samrichter888@gmail.com">Sam Richter</maintainer>
  <license>TODO: License declaration</license>

  <depend>csm_sim</depend>
  <depend>cardinal_perception</depend>
  <depend>multiscan_driver</depend>
  <depend>foxglove_bridge</depend>
  <depend>phoenix6_driver</depend>
  <depend>teleop_control</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>