<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_profiling</name>
  <version>0.0.1</version>
  <description>ROS2 Profiling Tools</description>
  <maintainer email="samrichter888@gmail.com">Sam Richter</maintainer>
  <license>UNLISCENCED</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rclcpp</depend> -->
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_generator_py</exec_depend>
  <build_depend>rosidl_generator_py</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
